tests/errors/syn_class_var12.java
public class syn_class_var12 {
public static int[] name
}